--- a/src/main/webapp/public/footer.html
+++ b/src/main/webapp/public/footer.html
@@ -5,8 +5,8 @@
 <title>Footer</title>
 <style>
     footer {
-        background-color: #007BFF;
-        color: white;
+        background-color: #E3EED4;
+        color: black;
         padding: 20px 0;
         text-align: center;
     }
@@ -32,10 +32,6 @@
     .footer-bottom {
         margin-top: 15px;
         font-size: 14px;
-        color: #cce5ff;
-    }
-    .footer-title .highlight-red {
-        color: red; 
     }
 </style>
 </head>
