continuing index page frontend and integrate servicecategory backend

--- a/src/main/webapp/public/header.html
+++ b/src/main/webapp/public/header.html
@@ -69,10 +69,10 @@
 
 <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="cart.html">Cart</a></li>
-        <li><a href="booking-history.html">Booking History</a></li>
+        <li><a href="index.jsp">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Cart</a></li>
+        <li><a href="#">Booking History</a></li>
     </ul>
 </nav>
 
